Поправил фейл теста постман